updated sample configurations

--- a/etc/hosts.ini
+++ b/etc/hosts.ini
@@ -1,28 +1,31 @@
 {
     "1.1.1.10-1.1.1.100" : {
         "gateway" : "1.1.1.1" ,
+        "default_state" : "blocked" ,
         "ports" : {
+            "20-21" : { "state" : "open" },
             "22" : { "state" : "open" },
-            "25" : { "state" : "open" },
-            "default" : { "state" : "blocked" }
+            "25" : { "state" : "open" }
         }
     },
 
     "2.2.2.10-2.2.2.100" : {
         "gateway" : "2.2.2.1" ,
+        "default_state" : "blocked" ,
         "ports" : {
+            "20-21" : { "state" : "open" },
             "22" : { "state" : "open" },
-            "25" : { "state" : "open" },
-            "default" : { "state" : "blocked" }
+            "25" : { "state" : "open" }
         }
     },
 
     "3.3.3.10-3.3.3.100" : {
         "gateway" : "2.2.2.1" ,
+        "default_state" : "blocked" ,
         "ports" : {
+            "20-21" : { "state" : "open" },
             "22" : { "state" : "open" },
-            "25" : { "state" : "open" },
-            "default" : { "state" : "blocked" }
+            "25" : { "state" : "open" }
         }
     }
 }
