--- a/etc/routers.ini
+++ b/etc/routers.ini
@@ -5,9 +5,9 @@
             { "network" : "1.1.1.0/24",  "address" : "1.1.1.1"  , "latency" : "1" },
             { "network" : "2.2.2.0/24",  "address" : "2.2.2.1"  , "latency" : "100" }
         ], 
-        "routes" : { 
-            "0.0.0.0/0" : "local" 
-        }
+        "routes" : [ 
+            { "network" : "0.0.0.0/0" , "next_hop" : "10.0.0.1" }
+        ]
     },
 
     "10.0.0.52" : {
@@ -16,7 +16,9 @@
             { "network" : "1.1.1.0/24",  "address" : "1.1.1.2",   "latency" : "1" },
             { "network" : "3.3.3.0/24",  "address" : "3.3.3.2",   "latency" : "50" }
         ],
-        "routes" : { "0.0.0.0/0" : "local" }
+        "routes" : [ 
+            { "network" : "0.0.0.0/0" , "next_hop" : "10.0.0.1" }
+        ]
     },
 
     "3.3.3.3" : {
@@ -24,6 +26,8 @@
             { "network" : "3.3.3.0/24",  "address" : "3.3.3.3", "latency" : "50" },
             { "network" : "4.4.4.0/24",  "address" : "4.4.4.3", "latency" : "25" }
         ],
-        "routes" : { "0.0.0.0/0" : "3.3.3.2" }
+        "routes" : [ 
+            { "network" : "0.0.0.0/0" , "next_hop" : "3.3.3.2" }
+        ]
     }
 }
