--- a/etc/routers.ini
+++ b/etc/routers.ini
@@ -5,9 +5,7 @@
             { "network" : "1.1.1.0/24",  "address" : "1.1.1.1"  , "latency" : "1" },
             { "network" : "2.2.2.0/24",  "address" : "2.2.2.1"  , "latency" : "100" }
         ], 
-        "routes" : [ 
-            { "network" : "0.0.0.0/0" , "next_hop" : "10.0.0.1" }
-        ]
+        "upstream" : "0.0.0.0"
     },
 
     "10.0.0.52" : {
@@ -16,9 +14,7 @@
             { "network" : "1.1.1.0/24",  "address" : "1.1.1.2",   "latency" : "1" },
             { "network" : "3.3.3.0/24",  "address" : "3.3.3.2",   "latency" : "50" }
         ],
-        "routes" : [ 
-            { "network" : "0.0.0.0/0" , "next_hop" : "10.0.0.1" }
-        ]
+        "upstream" : "0.0.0.0"
     },
 
     "3.3.3.3" : {
@@ -26,8 +22,6 @@
             { "network" : "3.3.3.0/24",  "address" : "3.3.3.3", "latency" : "50" },
             { "network" : "4.4.4.0/24",  "address" : "4.4.4.3", "latency" : "25" }
         ],
-        "routes" : [ 
-            { "network" : "0.0.0.0/0" , "next_hop" : "3.3.3.2" }
-        ]
+        "upstream" : "3.3.3.2"
     }
 }
