refactor to allow for multiple loggers.

--- a/etc/config.ini
+++ b/etc/config.ini
@@ -2,6 +2,10 @@
 interface = ens33
 filter = 'arp or ip'
 
-[logging]
+[app_logging]
 log_path = var/log
 log_name = trapt.log
+
+[network_logging]
+log_path = var/log
+log_name = network.log
