Slightly modified configuration formats to support needed functionality.

--- a/etc/hosts.ini
+++ b/etc/hosts.ini
@@ -1,4 +1,14 @@
 {
+    "10.0.0.99" : {
+        "gateway" : "0.0.0.0" ,
+        "default_state" : "blocked" ,
+        "ports" : {
+            "20-21" : { "state" : "open" },
+            "22" : { "state" : "open" },
+            "25" : { "state" : "open" }
+        }
+    },
+
     "1.1.1.10-1.1.1.100" : {
         "gateway" : "1.1.1.1" ,
         "default_state" : "blocked" ,
@@ -19,8 +29,8 @@
         }
     },
 
-    "3.3.3.10-3.3.3.100" : {
-        "gateway" : "2.2.2.1" ,
+    "4.4.4.10-4.4.4.100" : {
+        "gateway" : "4.4.4.3" ,
         "default_state" : "blocked" ,
         "ports" : {
             "20-21" : { "state" : "open" },
