--- a/etc/routers.ini
+++ b/etc/routers.ini
@@ -1,26 +1,60 @@
 {
     "10.0.0.51" : {
         "links" : [
-            { "network" : "10.0.0.0/24", "address" : "10.0.0.51", "latency" : "1" },
-            { "network" : "1.1.1.0/24",  "address" : "1.1.1.1"  , "latency" : "1" },
-            { "network" : "2.2.2.0/24",  "address" : "2.2.2.1"  , "latency" : "100" }
+            {   
+                "network" : "10.0.0.0/24", 
+                "address" : "10.0.0.51", 
+                "latency" : "1",
+                "external" : "1"
+            },
+            { 
+                "network" : "1.1.1.0/24",
+                "address" : "1.1.1.1", 
+                "latency" : "1"
+            },
+            {
+                "network" : "2.2.2.0/24",
+                "address" : "2.2.2.1", 
+                "latency" : "100" 
+            }
         ], 
         "upstream" : "0.0.0.0"
     },
 
     "10.0.0.52" : {
         "links" : [
-            { "network" : "10.0.0.0/24", "address" : "10.0.0.52", "latency" : "1" },
-            { "network" : "1.1.1.0/24",  "address" : "1.1.1.2",   "latency" : "1" },
-            { "network" : "3.3.3.0/24",  "address" : "3.3.3.2",   "latency" : "50" }
+            {
+                "network" : "10.0.0.0/24", 
+                "address" : "10.0.0.52",
+                "latency" : "1",
+                "external" : "1"
+            },
+            {
+                "network" : "1.1.1.0/24",
+                "address" : "1.1.1.2",
+                "latency" : "1"
+            },
+            {
+                "network" : "3.3.3.0/24",
+                "address" : "3.3.3.2",
+                "latency" : "50"
+            }
         ],
         "upstream" : "0.0.0.0"
     },
 
     "3.3.3.3" : {
         "links" : [
-            { "network" : "3.3.3.0/24",  "address" : "3.3.3.3", "latency" : "50" },
-            { "network" : "4.4.4.0/24",  "address" : "4.4.4.3", "latency" : "25" }
+            {
+                "network" : "3.3.3.0/24",
+                "address" : "3.3.3.3",
+                "latency" : "50"
+            },
+            {
+                "network" : "4.4.4.0/24",
+                "address" : "4.4.4.3",
+                "latency" : "25"
+            }
         ],
         "upstream" : "3.3.3.2"
     }
