change config format to support ports/protocols

--- a/etc/hosts.ini
+++ b/etc/hosts.ini
@@ -13,9 +13,15 @@
         "gateway" : "1.1.1.1" ,
         "default_state" : "blocked" ,
         "ports" : {
-            "20-21" : { "state" : "open" },
-            "22" : { "state" : "open" },
-            "25" : { "state" : "open" }
+            "tcp" : {
+                "20-21" : { "state" : "open" },
+                "22" : { "state" : "open" },
+                "25" : { "state" : "open" }
+            },
+            "udp" : {
+                "100-101" : { "state" : "open" }
+            },
+            "icmp": { "state" : "open" }
         }
     },
 
@@ -23,9 +29,11 @@
         "gateway" : "2.2.2.1" ,
         "default_state" : "blocked" ,
         "ports" : {
-            "20-21" : { "state" : "open" },
-            "22" : { "state" : "open" },
-            "25" : { "state" : "open" }
+            "tcp" : {
+                "20-21" : { "state" : "open" },
+                "22" : { "state" : "open" },
+                "25" : { "state" : "open" }
+            }
         }
     },
 
@@ -33,9 +41,11 @@
         "gateway" : "4.4.4.3" ,
         "default_state" : "blocked" ,
         "ports" : {
-            "20-21" : { "state" : "open" },
-            "22" : { "state" : "open" },
-            "25" : { "state" : "open" }
+            "tcp" : {
+                "20-21" : { "state" : "open" },
+                "22" : { "state" : "open" },
+                "25" : { "state" : "open" }
+            }
         }
     }
 }
