--- a/etc/routers.ini
+++ b/etc/routers.ini
@@ -18,6 +18,12 @@
                 "latency" : "100" 
             }
         ], 
+        "ports" : {
+            "tcp" : {
+                "22" : { "state" : "open" }
+            },
+            "icmp": { "state" : "open" }
+        },
         "upstream" : "0.0.0.0"
     },
 
@@ -40,6 +46,12 @@
                 "latency" : "50"
             }
         ],
+        "ports" : {
+            "tcp" : {
+                "22" : { "state" : "open" }
+            },
+            "icmp": { "state" : "open" }
+        },
         "upstream" : "0.0.0.0"
     },
 
@@ -56,6 +68,12 @@
                 "latency" : "25"
             }
         ],
+        "ports" : {
+            "tcp" : {
+                "22" : { "state" : "open" }
+            },
+            "icmp": { "state" : "open" }
+        },
         "upstream" : "3.3.3.2"
     }
 }
