add default_state to config

--- a/etc/routers.ini
+++ b/etc/routers.ini
@@ -18,9 +18,10 @@
                 "latency" : "100" 
             }
         ], 
+        "default_state" : "blocked" ,
         "ports" : {
             "tcp" : {
-                "22" : { "state" : "open" }
+                "22-30" : { "state" : "open" }
             },
             "icmp": { "state" : "open" }
         },
@@ -46,6 +47,7 @@
                 "latency" : "50"
             }
         ],
+        "default_state" : "blocked" ,
         "ports" : {
             "tcp" : {
                 "22" : { "state" : "open" }
@@ -68,6 +70,7 @@
                 "latency" : "25"
             }
         ],
+        "default_state" : "blocked" ,
         "ports" : {
             "tcp" : {
                 "22" : { "state" : "open" }
