--- a/etc/hosts.ini
+++ b/etc/hosts.ini
@@ -1,11 +1,17 @@
 {
     "10.0.0.99" : {
-        "gateway" : "0.0.0.0" ,
+        "gateway" : "10.0.0.51" ,
         "default_state" : "blocked" ,
         "ports" : {
-            "20-21" : { "state" : "open" },
-            "22" : { "state" : "open" },
-            "25" : { "state" : "open" }
+            "tcp" : {
+                "20-21" : { "state" : "open" },
+                "22" : { "state" : "open" },
+                "25" : { "state" : "open" }
+            },
+            "udp" : {
+                "100-101" : { "state" : "open" }
+            },
+            "icmp" : { "state" : "open" }
         }
     },
 
