--- a/etc/routers.ini
+++ b/etc/routers.ini
@@ -4,8 +4,7 @@
             {   
                 "network" : "10.0.0.0/24", 
                 "address" : "10.0.0.51", 
-                "latency" : "1",
-                "external" : "1"
+                "latency" : "0"
             },
             { 
                 "network" : "1.1.1.0/24",
@@ -25,7 +24,7 @@
             },
             "icmp": { "state" : "open" }
         },
-        "upstream" : "0.0.0.0"
+        "upstream" : "10.0.0.51"
     },
 
     "10.0.0.52" : {
@@ -33,8 +32,7 @@
             {
                 "network" : "10.0.0.0/24", 
                 "address" : "10.0.0.52",
-                "latency" : "1",
-                "external" : "1"
+                "latency" : "0"
             },
             {
                 "network" : "1.1.1.0/24",
@@ -52,9 +50,9 @@
             "tcp" : {
                 "22" : { "state" : "open" }
             },
-            "icmp": { "state" : "open" }
+            "icmp": { "state" : "blocked" }
         },
-        "upstream" : "0.0.0.0"
+        "upstream" : "10.0.0.52"
     },
 
     "3.3.3.3" : {
