update config for TCP traffic

--- a/etc/config.ini
+++ b/etc/config.ini
@@ -1,6 +1,6 @@
 [general]
 interface = ens33
-filter = inbound and (arp or icmp)
+filter = inbound and (arp or icmp or tcp) and not host 10.0.0.10
 
 [app_logging]
 log_path = var/log
